# PlaydateTemplateForC

./: CMakeLists.txt  Makefile  README.md
src/: game.c
